package com.example.kotlinapp

object GeminiConfig {
    const val GEMINI_API_KEY: String = ""
}